# rest_v1

./: .env  Cargo.toml
migrations/2020-03-17-101825_creat_user/: up.sql
src/: db_connection.rs  main.rs  schema.rs
src/model/: product.rs  user.rs
src/routes/: product.rs  user.rs
