[package]
name = "practical-rust"
version = "0.1.0"
authors = ["uzzol <davepillowgood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
diesel = {version="1.4.3", features=["postgres","r2d2"]}
dotenv = "0.15.0"
serde = "1.0.104"
serde_json = "1.0.48"


